--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -13,7 +13,7 @@
   width: 1440px;
 }
 
-.cart .text-wrapper {
+.cart .textWrapper {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 44.2px;
@@ -28,11 +28,18 @@
   border: none;
 }
 
-.cart .overlap-group {
-  /* background-color: #eeeeeeee; */
-  height: 89px;
-  /* position: absolute; */
-  /* top: 1358px; */
+.cart .overlapGroup {
+  height: 90px;
+  width: 1004px;
+  border: none;
+  margin: 40px auto 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart .overlapGroup2 {
+  font-size: 40px;
+  height: 90px;
   width: 1004px;
   border: none;
   margin: 40px auto 0;
@@ -43,15 +50,12 @@
 .cart .overlap {
   background-color: #eeeeeeee;
   height: 89px;
-  /* left: 798px;
-  position: absolute;
-  top: 1358px; */
   width: 281px;
   border: none;
   position: relative;
 }
 
-.cart .text-wrapper {
+.cart .textWrapper {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 44.2px;
@@ -66,7 +70,7 @@
   border: none;
 }
 
-.cart .cart-item {
+.cart .cartItem {
   background-color: #eeeeeeee;
   height: 241px;
   overflow: hidden;
@@ -82,10 +86,7 @@
   position: relative;
 }
 
-.cart .cart-item > * {
-}
-
-.cart .image-box {
+.cart .imageBox {
   background-color: #ffffff;
   height: 191px;
   left: 121px;
@@ -94,7 +95,7 @@
   width: 191px;
 }
 
-.cart .overlap-2 {
+.cart .overlap2 {
   height: 56px;
   left: 549px;
   position: absolute;
@@ -103,7 +104,7 @@
   /*사용하는 css*/
 }
 
-.cart .image-box-2 {
+.cart .imageBox2 {
   background-color: #ffffff;
   border: 1.73px solid;
   border-color: #000000;
@@ -114,7 +115,7 @@
   width: 135px;
 }
 
-.cart .text-wrapper-3 {
+.cart .textWrapper3 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 41.6px;
@@ -137,14 +138,6 @@
   width: 2px;
 }
 
-/* .cart .overlap-group-2 {
-  height: 56px;
-  left: 90px;
-  position: absolute;
-  top: 0;
-  width: 45px;
-} */
-
 .cart .img {
   height: 28px;
   left: 0;
@@ -153,7 +146,7 @@
   width: 45px;
 }
 
-.cart .text-wrapper-4 {
+.cart .textWrapper4 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 17.3px;
@@ -175,7 +168,7 @@
   width: 45px;
 }
 
-.cart .text-wrapper-5 {
+.cart .textWrapper5 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 17.3px;
@@ -189,7 +182,7 @@
   border: none;
 }
 
-.cart .text-wrapper-6 {
+.cart .textWrapper6 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 41.6px;
@@ -202,7 +195,7 @@
   width: 225px;
 }
 
-.cart .is-buy-check-box {
+.cart .isBuyCheckBox {
   background-color: #ffffff;
   height: 43px;
   left: 41px;
@@ -211,7 +204,7 @@
   width: 43px;
 }
 
-.cart .text-wrapper-7 {
+.cart .textWrapper7 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 41.6px;
@@ -224,7 +217,7 @@
   width: 149px;
 }
 
-.cart .overlap-3 {
+.cart .overlap3 {
   height: 56px;
   left: 959px;
   position: absolute;
@@ -233,7 +226,7 @@
   /*사용하는 css*/
 }
 
-.cart .text-wrapper-8 {
+.cart .textWrapper8 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 41.6px;
@@ -246,7 +239,7 @@
   width: 225px;
 }
 
-.cart .text-wrapper-9 {
+.cart .textWrapper9 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 41.6px;
@@ -259,75 +252,19 @@
   width: 225px;
 }
 
-/* .cart .cart-item-2 {
-  background-color: #eeeeeeee;
-  height: 241px;
-  left: 32px;
-  overflow: hidden;
-  position: absolute;
-  top: 682px;
-  width: 1377px;
-} */
-
-.cart .text-wrapper-10 {
+.cart .textWrapper11 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 41.6px;
+  font-size: 45px;
   font-weight: 400;
-  left: 366px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 43px;
-  width: 149px;
-}
-
-/* .cart .cart-item-3 {
-  background-color: #eeeeeeee;
-  height: 241px;
-  left: 32px;
-  overflow: hidden;
-  position: absolute;
-  top: 963px;
-  width: 1377px;
-} */
-
-.cart .image-box-4 {
-  background-color: #ffffff;
-  border: 1.73px solid;
-  border-color: #000000;
-  height: 56px;
-  left: 217px;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  width: 135px;
-}
-
-.cart .text-wrapper-11 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 44.2px;
-  font-weight: 400;
-  left: 636px;
   letter-spacing: 0;
   line-height: normal;
   padding-top: 121px;
-
-  /* position: absolute;
-  top: 121px; */
-
-  margin: 0 auto;
-  width: 295px;
+  text-align: center;
 }
 
 .cart .navbar {
   background-color: #eeeeeeee;
-  /* left: 31px; */
-
-  /* position: absolute; */
-  /* top: 250px; */
-
   margin: 80px auto 0;
   height: 92px;
   width: 1377px;
@@ -338,14 +275,7 @@
   position: relative;
 }
 
-/* .cart .navbar > * {
-  color: #000000;
-  font-family: 'Inter-Light', Helvetica;
-  font-size: 38.2px;
-  font-weight: 300;
-} */
-
-.cart .text-wrapper-12 {
+.cart .textWrapper12 {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
   font-size: 38.2px;
@@ -359,7 +289,7 @@
   top: 22px;
 }
 
-.cart .text-wrapper-13 {
+.cart .textWrapper13 {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
   font-size: 38.2px;
@@ -373,7 +303,7 @@
   top: 22px;
 }
 
-.cart .text-wrapper-14 {
+.cart .textWrapper14 {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
   font-size: 38.2px;
@@ -387,7 +317,7 @@
   top: 22px;
 }
 
-.cart .text-wrapper-15 {
+.cart .textWrapper15 {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
   font-size: 38.2px;
@@ -401,7 +331,7 @@
   top: 22px;
 }
 
-.cart .text-wrapper-16 {
+.cart .textWrapper16 {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
   font-size: 38.2px;
@@ -415,7 +345,7 @@
   top: 22px;
 }
 
-.cart .text-wrapper-17 {
+.cart .textWrapper17 {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
   font-size: 38.2px;
@@ -429,12 +359,11 @@
   top: 22px;
 }
 
-.cart .is-buy-check-box-2 {
+.cart .buyCheckBox2 {
   background-color: #ffffff;
   height: 43px;
   left: 42px;
   position: absolute;
-  /* top: 24px; */
   transform: rotate(180deg);
   width: 43px;
 }
