--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
-*{margin: 0; padding: 0; box-sizing: border-box;}
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+*{margin: 0; padding: 0; box-sizing: border-box; font-family: Pretendard-Regular;}
 ul,li,ol{list-style: none;}
 
 .inner{
     padding: 0 120px;
+}
+
+.link{
+    text-decoration: none;
 }
