--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -2,10 +2,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  background-color: #eee;
+  padding: 20px 120px;
+  background-color: #fff;
 }
-.detail .div-wrapper {
+
+.detail .inner {
+  background-color: #eee;
+  width: 100%;
+}
+
+.detail .wrapper {
   padding: 0 10px;
 }
-.detail .div-wrapper .text-wrapper {}
+.detail .div-wrapper .text {
+  padding: 10px;
+  background-color: #fff;
+}
