--- a/src/css/payFail.css
+++ b/src/css/payFail.css
@@ -8,34 +8,34 @@
 
 .payFail .div {
   background-color: #ffffff;
-  height: 1513.02px;
+  height: 1500px;
   position: relative;
   width: 1440px;
 }
 
 .payFail .overlap {
-  height: 1181px;
-  left: 194px;
+  height: 1172px;
+  left: 193px;
   position: absolute;
-  top: 93px;
-  width: 1068px;
+  top: 92px;
+  width: 1060px;
 }
 
 .payFail .innerBox {
   background-color: #eeeeee;
-  height: 1181px;
+  height: 1172px;
   left: 0;
   position: absolute;
   top: 0;
-  width: 1068px;
+  width: 1060px;
 }
 
 .payFail .overlapGroup {
-  height: 98px;
+  height: 97px;
   left: 36px;
   position: absolute;
   top: 58px;
-  width: 952px;
+  width: 945px;
 }
 
 .payFail .price {
@@ -262,9 +262,10 @@
   text-align: center;
   overflow: hidden;
   position: absolute;
+  padding-top: 15px;
   top: 1348px;
   width: 345px;
-  font-size: 43px;
+  font-size: 35px;
 }
 
 .payFail .innerBox2 {
@@ -272,9 +273,10 @@
   height: 80px;
   left: 762px;
   position: absolute;
+  padding-top: 15px;
   top: 1348px;
   width: 345px;
-  font-size: 43px;
+  font-size: 35px;
   text-align: center;
 }
 
