--- a/src/css/paySuccess.css
+++ b/src/css/paySuccess.css
@@ -8,7 +8,7 @@
 
 .paySuccess .div {
   background-color: #ffffff;
-  height: 1502.12px;
+  height: 1500px;
   position: relative;
   width: 1440px;
 }
@@ -257,22 +257,24 @@
 
 .paySuccess .toHome {
   background-color: #eeeeee;
-  font-size: 43px;
+  font-size: 35px;
   height: 80px;
   left: 180px;
   text-align: center;
   position: absolute;
+  padding-top: 15px;
   top: 1230px;
   width: 300px;
 }
 
 .paySuccess .nextPage {
   background-color: #eeeeee;
-  font-size: 43px;
+  font-size: 35px;
   height: 80px;
   left: 580px;
   text-align: center;
   position: absolute;
+  padding-top: 15px;
   top: 1230px;
   width: 300px;
 }
