--- a/src/css/productList.css
+++ b/src/css/productList.css
@@ -5,46 +5,9 @@
 .productList .productWrap {
   background-color: #ffffff;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: nowrap;
   padding: 20px;
 }
 
-.productList .product {
-  background-color: #eeeeee;
-  width: 100%;
-  margin: 20px 10px;
-}
-
-.productList .productImg {
-  display: block;
-  width: 100%;
-  height: 200px;
-  background-color: #ffffff;
-}
-
-.productList .text {
-  width: 100%;
-  margin: 5px 0;
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 20px;
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
-  text-align: center;
-  white-space: nowrap;
-}
-
-.productList .infoBox {
-  background-color: #ffffff;
-}
-
-.productList .productName {
-  background-color: #eeeeee;
-}
-
-.productList .productInfo {
-  background-color: #eeeeee;
-}
