--- a/src/css/paySuccess.css
+++ b/src/css/paySuccess.css
@@ -44,15 +44,15 @@
   left: 20px;
   position: absolute;
   top: 0;
-  width: 926px;
+  width: 950px;
 }
 
-.paySuccess .textWrapper {
+.paySuccess .successMessage {
   color: #aa0000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 44.4px;
   font-weight: 400;
-  left: 0;
+  left: 30px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
@@ -61,13 +61,13 @@
   width: 945px;
 }
 
-.paySuccess .overlapGroup2 {
+.paySuccess .orderInfo {
   background-color: #ffffff;
   height: 918px;
   left: 56px;
   position: absolute;
   top: 191px;
-  width: 926px;
+  width: 950px;
 }
 
 .paySuccess .textWrapper2 {
@@ -86,14 +86,14 @@
 .paySuccess .textWrapper3 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 37px;
+  font-size: 35px;
   font-weight: 400;
   left: 55px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 189px;
+  top: 170px;
 }
 
 .paySuccess .textWrapper4 {
@@ -151,14 +151,14 @@
 .paySuccess .textWrapper8 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 37px;
+  font-size: 35px;
   font-weight: 400;
   left: 256px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 189px;
+  top: 170px;
 }
 
 .paySuccess .textWrapper9 {
@@ -171,7 +171,7 @@
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 344px;
+  top: 330px;
 }
 
 .paySuccess .textWrapper10 {
@@ -184,10 +184,10 @@
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 499px;
+  top: 490px;
 }
 
-.paySuccess .p {
+.paySuccess .optionInfo1 {
   color: #00000070;
   font-family: "Inter-Regular", Helvetica;
   font-size: 33.3px;
@@ -197,7 +197,7 @@
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 251px;
+  top: 245px;
 }
 
 .paySuccess .textWrapper11 {
@@ -213,7 +213,7 @@
   top: 859px;
 }
 
-.paySuccess .textWrapper12 {
+.paySuccess .optionInfo2 {
   color: #00000070;
   font-family: "Inter-Regular", Helvetica;
   font-size: 33.3px;
@@ -226,7 +226,7 @@
   top: 407px;
 }
 
-.paySuccess .textWrapper13 {
+.paySuccess .optionInfo3 {
   color: #00000070;
   font-family: "Inter-Regular", Helvetica;
   font-size: 33.3px;
@@ -257,24 +257,24 @@
 
 .paySuccess .toHome {
   background-color: #eeeeee;
-  font-size: 35px;
+  font-size: 30px;
   height: 80px;
   left: 180px;
   text-align: center;
   position: absolute;
-  padding-top: 15px;
+  padding-top: 25px;
   top: 1230px;
   width: 300px;
 }
 
 .paySuccess .nextPage {
   background-color: #eeeeee;
-  font-size: 35px;
+  font-size: 30px;
   height: 80px;
   left: 580px;
   text-align: center;
   position: absolute;
-  padding-top: 15px;
+  padding-top: 25px;
   top: 1230px;
   width: 300px;
 }
