main 페이지 최신순 정렬 구현, productAdd 정렬해야 함. products.csv(프로덕트 데이터)공유

--- a/src/css/product.css
+++ b/src/css/product.css
@@ -1,6 +1,6 @@
 .product {
   background-color: #eeeeee;
-  margin: 20px 10px;
+  margin: 20px 30px;
 }
 
 .productImg {
@@ -21,6 +21,8 @@
   line-height: normal;
   text-align: center;
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .infoBox {
