--- a/src/css/productList.css
+++ b/src/css/productList.css
@@ -2,12 +2,29 @@
   background-color: hsl(0, 0%, 100%);
 }
 
+.productList .inner{}
+.productList .inner .addBtnForm{
+  display: flex; justify-content: flex-end; align-items: center;
+}
+.productList .inner .addBtnForm button{
+  width: 100px; height: 50px; padding: 10px;
+  border-radius: 20px;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+
 .productList .productWrap {
   background-color: #ffffff;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   padding: 20px;
 }
 
+.productList .productWrap .link{
+  max-width: 25%;
+}
+.productList .productWrap .link  .product{
+  max-width: 240px;
+  width: 100%;
+}
