--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -16,15 +16,15 @@
 .cart .buttonText {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 44.2px;
-  font-weight: 400;
-  left: 45px;
+  font-size: 30px;
+  font-weight: 600;
+  left: 50px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 5px;
+  top: 15px;
   white-space: nowrap;
-  width: 180px;
+  width: 150px;
   border: none;
 }
 
@@ -38,19 +38,17 @@
 }
 
 .cart .buttonGroup {
-  font-size: 40px;
-  height: 90px;
-  width: 700px;
+  width: 600px;
   border: none;
-  margin: 40px auto 0;
+  margin: 100px auto 0;
   display: flex;
   justify-content: space-between;
 }
 
 .cart .button {
   background-color: #eeeeeeee;
-  height: 89px;
-  width: 281px;
+  height: 70px;
+  width: 250px;
   border: none;
   position: relative;
 }
@@ -74,9 +72,6 @@
   background-color: #eeeeeeee;
   height: 241px;
   overflow: hidden;
-  /* position: absolute;
-  left: 32px;
-  top: 401px; */
   width: 1377px;
   margin: 40px auto 0;
   box-sizing: border-box;
@@ -86,7 +81,7 @@
   position: relative;
 }
 
-.cart .imageBox {
+.cart .productImgBox {
   background-color: #ffffff;
   height: 191px;
   left: 121px;
@@ -95,16 +90,15 @@
   width: 191px;
 }
 
-.cart .overlap2 {
+.cart .inner {
   height: 56px;
   left: 549px;
   position: absolute;
   top: 101px;
   width: 352px;
-  /*사용하는 css*/
 }
 
-.cart .imageBox2 {
+.cart .group1 {
   background-color: #ffffff;
   border: 1.73px solid;
   border-color: #000000;
@@ -115,17 +109,16 @@
   width: 135px;
 }
 
-.cart .textWrapper3 {
+.cart .cartProductStock {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 41.6px;
+  font-size: 30px;
   font-weight: 400;
-  /* left: 17px; */
-  right: 8px;
+  right: 20px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 2px;
+  top: 11px;
   width: 42px;
   text-align: right;
 }
@@ -138,7 +131,7 @@
   width: 2px;
 }
 
-.cart .textWrapper4 {
+.cart .countUp {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 17.3px;
@@ -160,7 +153,7 @@
   width: 45px;
 }
 
-.cart .textWrapper5 {
+.cart .countDown {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 17.3px;
@@ -174,17 +167,17 @@
   border: none;
 }
 
-.cart .textWrapper6 {
+.cart .cartProductPrice {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 41.6px;
-  font-weight: 400;
-  left: 0;
+  font-size: 30px;
+  font-weight: 600;
+  left: 25px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 1px;
-  width: 225px;
+  width: 200px;
+  top: 5px;
 }
 
 .cart .isBuyCheckBox {
@@ -196,58 +189,61 @@
   width: 43px;
 }
 
-.cart .textWrapper7 {
+.cart .cartProductName {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 41.6px;
-  font-weight: 400;
-  left: 366px;
-  letter-spacing: 0;
-  line-height: normal;
+  font-size: 26px;
+  left: 350px;
   position: absolute;
-  top: 50px;
-  width: 149px;
+  top: 90px;
+  width: 180px;
+  overflow: hidden;
+  white-space: normal;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  word-break: keep-all;
 }
 
-.cart .overlap3 {
+.cart .group2 {
   height: 56px;
   left: 959px;
   position: absolute;
   top: 102px;
   width: 428px;
-  /*사용하는 css*/
 }
 
-.cart .textWrapper8 {
+.cart .cartCarryPrice {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 41.6px;
-  font-weight: 400;
-  left: 0;
+  font-size: 30px;
+  font-weight: 600;
+  left: 25px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 0;
-  width: 225px;
+  top: 5px;
+  width: 200px;
 }
 
-.cart .textWrapper9 {
+.cart .cartSumPrice {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 41.6px;
-  font-weight: 400;
-  left: 203px;
-  letter-spacing: 0;
+  font-size: 30px;
+  font-weight: 600;
+  left: 170px;
+  text-align: center;
   line-height: normal;
   position: absolute;
-  top: 2px;
+  top: 5px;
   width: 225px;
 }
 
 .cart .title {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 45px;
+  font-size: 30px;
   font-weight: 400;
   letter-spacing: 0;
   line-height: normal;
@@ -270,7 +266,7 @@
 .cart .cartBar .productImage {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
-  font-size: 38.2px;
+  font-size: 30px;
   font-weight: 300;
   height: 46px;
   left: 160px;
@@ -278,13 +274,13 @@
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 22px;
+  top: 25px;
 }
 
 .cart .productName {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
-  font-size: 38.2px;
+  font-size: 30px;
   font-weight: 300;
   height: 46px;
   left: 371px;
@@ -292,13 +288,13 @@
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 22px;
+  top: 25px;
 }
 
 .cart .productPrice {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
-  font-size: 38.2px;
+  font-size: 30px;
   font-weight: 300;
   height: 46px;
   left: 583px;
@@ -306,13 +302,13 @@
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 22px;
+  top: 25px;
 }
 
 .cart .productStock {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
-  font-size: 38.2px;
+  font-size: 30px;
   font-weight: 300;
   height: 46px;
   left: 794px;
@@ -320,13 +316,13 @@
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 22px;
+  top: 25px;
 }
 
 .cart .productCarryPay {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
-  font-size: 38.2px;
+  font-size: 30px;
   font-weight: 300;
   height: 46px;
   left: 971px;
@@ -334,13 +330,13 @@
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 22px;
+  top: 25px;
 }
 
 .cart .sumPay {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
-  font-size: 38.2px;
+  font-size: 30px;
   font-weight: 300;
   height: 46px;
   left: 1183px;
@@ -348,7 +344,7 @@
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 22px;
+  top: 25px;
 }
 
 .cart .buyCheckBox {
