cart의 상품이미지 가져오기 코드 수정완료

--- a/src/css/payment.css
+++ b/src/css/payment.css
@@ -339,7 +339,7 @@ a {
   background-color: #eeeeee;
   height: 117px;
   left: 24px;
-  position: absolute;
+  position: relative;
   top: 75px;
   width: 330px;
 }
